<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lytToolbarAboutSetting"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/background"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title_detail"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/tv_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.08"
            android:text="Detail Weather"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivSend"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Today, April 2020"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytToolbarAboutSetting" />

    <TextView
        android:id="@+id/tv_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempMax"
        android:textSize="58sp"
        app:layout_constraintStart_toStartOf="@+id/tv_today"
        app:layout_constraintTop_toBottomOf="@+id/tv_today" />

    <TextView
        android:id="@+id/tv_temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/tempMin"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_temp_max"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_max"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_max" />

    <ImageView
        android:id="@+id/iv_weather"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_today" />

    <TextView
        android:id="@+id/tv_status_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="Clear"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_weather"
        app:layout_constraintStart_toStartOf="@+id/iv_weather"
        app:layout_constraintTop_toBottomOf="@+id/iv_weather" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="35dp"
        android:text="@string/city"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_temp_max"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_min" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:text="@string/humidity"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_preasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:text="@string/preassure"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_humidity" />

    <TextView
        android:id="@+id/tv_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:text="@string/wind"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_preasure" />

</androidx.constraintlayout.widget.ConstraintLayout>

